@@ -20,11 +20,11 @@ $(function() {
                 fields: [
                     { json_field: "ANIMALID", post_field: "animal", label: _("Animal"), type: "animal" },
                     { json_field: "ANIMALS", post_field: "animals", label: _("Animals"), type: "animalmulti" },
-                    { json_field: "MEDICALPROFILEID", post_field: "profileid", label:_("Profile"), type: "select",
+                    { json_field: "MEDICALPROFILEID", post_field: "profileid", label:_("Profile"), type: "select", classes: "asm-doubleselectbox", 
                         options: '<option value="0"></option>' +
                         html.list_to_options(controller.profiles, "ID", "PROFILENAME") },
-                    { json_field: "TREATMENTNAME", post_field: "treatmentname", label: _("Name"), type: "text", validation: "notblank" },
-                    { json_field: "DOSAGE", post_field: "dosage", label: _("Dosage"), type: "text", validation: "notblank" },
+                    { json_field: "TREATMENTNAME", post_field: "treatmentname", label: _("Name"), type: "text", classes: "asm-doubletextbox", validation: "notblank" },
+                    { json_field: "DOSAGE", post_field: "dosage", label: _("Dosage"), type: "text", classes: "asm-doubletextbox", validation: "notblank" },
                     { json_field: "COST", post_field: "cost", label: _("Cost"), type: "currency", defaultval: "0", hideif: function() { return !config.bool("ShowCostAmount"); } },
                     { json_field: "COSTPAIDDATE", post_field: "costpaid", label: _("Paid"), type: "date", hideif: function() { return !config.bool("ShowCostPaid"); } },
                     { json_field: "STARTDATE", post_field: "startdate", label: _("Start Date"), type: "date", validation: "notblank" },
